--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asyncpg==0.29.0
 cryptography==42.0.5
 greenlet==3.0.3
 marshmallow==3.21.0
+psycopg2-binary==2.9.9
 pytest==8.0.2
 pytest-aiohttp==1.0.5
 pytest-asyncio==0.23.5
