--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,9 @@ jobs:
             python-version: 3.12
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: update pythonpath
         run: echo "PYTHONPATH=$PYTHONPATH:/home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}" >> $GITHUB_ENV
